example/ambassador/authz.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: example-auth
spec:
  type: ClusterIP
  selector:
    app: example-auth
  ports:
  - port: 9001
    name: http-example-auth
    targetPort: http-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-auth
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: example-auth
  template:
    metadata:
      labels:
        app: example-auth
    spec:
      containers:
      - name: example-auth
        image: rnburn/ambassador-authz:0.1
        imagePullPolicy: Always
        ports:
        - name: http-api
          containerPort: 9001
        resources:
          limits:
            cpu: "0.1"
            memory: 100Mi
